# CourseworkSysProg

./: calculator.cpp  calculator.h
part2/: .gitignore  CMakeLists.txt  Makefile  calc.c  calc.h  main.c
patches/: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch
